# shiny-rs-example

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  plot.rs  server.rs
backend/src/server/: custom_input.rs  markdown_module.rs
frontend/: Cargo.toml  index.html
frontend/src/: components.rs  dependencies.rs  main.rs
frontend/src/components/: area_select_input.rs
src/: lib.rs  main.rs  plot.rs  server.rs
src/server/: insert_remove_html_module.rs  main_plot_module.rs  map_module.rs  update_inputs_module.rs  utils.rs
static/: index.html  ui.R
static/scss/: custom.scss
