[package]
name = "rusty-shiny"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.1"
actix-ws = "0.2.5"
shiny-rs = { git = "https://github.com/andyquinterom/shiny-rs", branch = "master" }
shiny-rs_derive = { git = "https://github.com/andyquinterom/shiny-rs_derive.git", branch = "master" }
awc = "3"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
tokio = { version = "1.13.1", features = ["rt", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.13.0"
statrs = "0.15.0"
plotly = "0.7.0"
actix = "0.13.0"
actix-web-actors = "4.1.0"
