[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19" 
shiny-rs-yew = { git = "https://github.com/andyquinterom/shiny-rs-yew", rev="d59f520" }
yew-interop = { version="0.3.0", features=["script"] }
